--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -11,17 +11,23 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
+      /*
+      Evito abertura do navegador
       "launchBrowser": true,
       "launchUrl": "swagger",
+      */
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "FilmesAPI": {
       "commandName": "Project",
+      /*
+       Evito abertura do navegador
       "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "swagger",
+  */
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
