--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FilmeConnection": "server=localhost;database=filmeDb;user=root;password=usbw"
+    "FilmeConnection": "Server=localhost;Database=filmeDb;Uid=root;Pwd=usbw;SSL Mode=None;"
   }
 }
